aws-infra-tf-modules/vpc-network/vpc.tf
#################################################
#          VPC Network Configuration            #
#################################################
resource "aws_vpc" "devOps_assessment" {

  cidr_block = var.cidr_block
  enable_dns_hostnames = var.enable_dns
  enable_dns_support = var.support_dns
  instance_tenancy = var.instance_tenancy
}
